account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account-container
          image: hm716/account
          ports:
            - containerPort : 8085
---
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  selector:
    app: account
#  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
#      nodePort: 31000
