customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
