banking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
spec:
  rules:
  - host: customers.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 8080
  - host: customer-accounts.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: account
            port:
              number: 8085
  - host: credits.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: credit
            port:
             number: 8090
